# simp2

./: .gitignore  CMakeLists.txt  README.md
.metadata/: version.ini
.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
.metadata/.plugins/com.genuitec.eclipse.ui.common.platform/: color-definitions-fix.css
.metadata/.plugins/org.eclipse.cdt.core/: _deps_asio-cmake-subbuild.1663750585804.pdom  _deps_asio-subbuild.1663750585812.pdom  _deps_spdlog-src.1663750585811.pdom  _deps_spdlog-subbuild.1663750585810.pdom  asio-cmake-subbuild.1663750585835.pdom  asio-subbuild.1663750585806.pdom  bench.1663750585812.pdom  component.1663750585809.pdom  doc.1663750585807.pdom  dom.1663750585807.pdom  example.1663750585793.pdom  examples.1663750585808.pdom  ftxui-src.1663750585810.pdom  ftxui-subbuild.1663750585805.pdom  spdlog-src.1663750585811.pdom  spdlog-src_bench.1663750585839.pdom  spdlog-src_example.1663750585813.pdom  spdlog-src_tests.1663750585808.pdom  spdlog-subbuild.1663750585807.pdom  tests.1663750585806.pdom
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-cmake-src/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-cmake-src/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-cmake-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-cmake-subbuild/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-cmake-subbuild/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_asio-subbuild/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_spdlog-src/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_spdlog-src/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_spdlog-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_spdlog-subbuild/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/_deps_spdlog-subbuild/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-cmake-src/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-cmake-src/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-cmake-src/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-cmake-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-cmake-subbuild/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-subbuild/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/asio-subbuild/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/bench/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/bench/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/component/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/component/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/component/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/doc/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/doc/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/dom/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/dom/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/dom/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/example/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/examples/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/ftxui-src/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/ftxui-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/spdlog-src/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/spdlog-src_bench/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/spdlog-src_example/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/spdlog-src_tests/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/spdlog-subbuild/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/tests/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
server/: server.xml
src/client/: client.hpp  main.cpp
src/common/: aes.cpp  aes.hpp  common.hpp  connection.hpp  message.hpp  protocol.hpp  queue.hpp  rsa.cpp  rsa.hpp  simp_protocol.hpp
src/server/: cmd_processor.hpp  main.cpp  server.hpp  server_connection.hpp  server_interface.cpp  server_interface.hpp  setup.cpp  setup.hpp  user_manager.hpp
(+14 files in other folders)
